# iot-net

./: Cargo.toml  LICENSE  README.md
config/: site_config.json
data/: config.json  devices.json
data/devices/: 02d951fe-255d-4dac-bf96-17187e2f0a90.db  1202d48e-4fe1-47e7-b1b9-8ceafbd9f02c.db  1723fe9b-8362-4d0f-8ead-b9df898fac39.db  259cb2c0-dc82-4f7e-83d8-ec043cf6a1ab.db  279f3915-7889-4e33-ade7-dcf94a8a5a5e.db  6aed1dc1-a4c6-40bf-9cb6-e86dd9f3a061.db  7b050867-e2af-42ee-81c1-60d5c7f563f1.db  7d577a51-1057-4449-94d3-659579cb607c.db  9071a98e-6387-40e0-a9e1-adf9f799aca2.db  9d51deef-c1a9-4664-bc0f-e561d80acb3f.db  d7406412-59d6-4ce3-8716-edfffb0643ae.db  e8e2e06d-da4d-43ac-b398-81d6983f8717.db
src/: api.rs  config.rs  device.rs  device_cache.rs  lib.rs  main.rs  site.rs
src/routes/: api_error.rs  get.rs  mod.rs  post.rs  site.rs
static/: about.html  index.html  load_devices.js  styles.css  track_device.js  tracker.html
templates/: template.c
test/: test.py  test_payload.json
