[package]
name = "iot_net"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
bincode = "1.3.3"
serde = { version = "1.0.204", features = [ "serde_derive" ]}
serde_json = "1.0.120"
uuid = {version="1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

